feat: add the sensor data to plant